Completed DEV QA Section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,77 @@
     </header>
     <main>
       <!-- -------------- This is web dev qa section ----------- -->
-      <section>This is web dev qa section section</section>
+      <section class="devqa-container">
+        <div class="dev-title">
+          <h1>Why Web Development??</h1>
+          <p>
+            Web development is the process of creating interactive websites and
+            applications. It involves using HTML, CSS, and JavaScript to create
+            content, structure, and style for the pages. Web development is
+            becoming more popular because it allows businesses to reach a wider
+            audience and create more engaging and user-friendly websites.
+          </p>
+        </div>
+        <div class="dev-content">
+          <!-- Dev Item 1  -->
+          <div class="dev-item">
+            <div class="dev-content-container">
+              <h1 class="dev-item-title">
+                I will Do Coding and Change The World
+              </h1>
+              <p class="dev-item-description">
+                Web development allows me to create interactive and dynamic
+                websites that can help businesses grow and reach their target
+                audience.
+              </p>
+              <button class="dev-btn">Learn More</button>
+            </div>
+            <img
+              class="dev-content-img"
+              src="/assets/dev1.png"
+              alt="I will Do Coding and Change The World"
+            />
+          </div>
+          <!-- Dev Item 2 -->
+          <div class="dev-item">
+            <img
+              class="dev-content-img"
+              src="/assets/dev2.png"
+              alt="I will help People by creating Modern Web System"
+            />
+            <div class="dev-content-container">
+              <h1 class="dev-item-title">
+                I will help People by creating Modern Web System
+              </h1>
+              <p class="dev-item-description">
+                Web development allows me to create interactive and dynamic
+                websites that can help businesses grow and reach their target
+                audience.
+              </p>
+              <button class="dev-btn">Learn More</button>
+            </div>
+          </div>
+          <!-- Dev Item  3-->
+          <div class="dev-item">
+            <div class="dev-content-container">
+              <h1 class="dev-item-title">
+                I will Do Coding and Change The World
+              </h1>
+              <p class="dev-item-description">
+                Web development allows me to create interactive and dynamic
+                websites that can help businesses grow and reach their target
+                audience.
+              </p>
+              <button class="dev-btn">Learn More</button>
+            </div>
+            <img
+              class="dev-content-img"
+              src="/assets/dev3.png"
+              alt="I will Do Coding and Change The World"
+            />
+          </div>
+        </div>
+      </section>
 
       <!-- -------------- This my inspiration section ----------- -->
       <section>This my inspiration section</section>
