--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main>
       <!-- -------------- This is web dev qa section ----------- -->
-      <section class="devqa-container">
+      <section class="container devqa-container">
         <div class="dev-title">
           <h1>Why Web Development??</h1>
           <p>
@@ -102,7 +102,29 @@
       </section>
 
       <!-- -------------- This my inspiration section ----------- -->
-      <section>This my inspiration section</section>
+      <section class="container">
+        <div class="inspiration-content">
+          <h1>My Inspiration</h1>
+          <p>
+            I've always been fascinated by technology and I wanted to make a
+            difference in the world. Web development has opened my eyes to the
+            possibilities and I'm excited to start working on projects that will
+            help me achieve my goals.
+          </p>
+        </div>
+        <div class="inspiration-video">
+          <iframe
+            width="100%"
+            height="100%"
+            src="https://www.youtube.com/embed/DGHn2uOAVCE?si=5f5VeDtJCruT799S"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </section>
 
       <!-- -------------- This my target section ----------- -->
       <section>This my target section</section>
