--- a/index.html
+++ b/index.html
@@ -1,138 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abu Sayed</title>
-    <link href="/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <!---------------- This is banner section ------------->
-    <header class="banner-container">
-      <div class="banner-content">
-        <img src="/assets/hero.png" alt="Coding Hero" />
-        <h1>
-          "In the near future, I hope to become a
-          <br />
-          Developer."
-        </h1>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abu Sayed</title>
+  <link href="/styles.css" rel="stylesheet" />
+</head>
+
+<body>
+  <!---------------- This is banner section ------------->
+  <header class="banner-container">
+    <div class="banner-content">
+      <img src="/assets/hero.png" alt="Coding Hero" />
+      <h1>
+        "In the near future, I hope to become a
+        <br />
+        Developer."
+      </h1>
+      <p>
+        To start web development. Must start with the basics of HTML and CSS.
+        HTML and CSS help create the basic design of a website. There are some
+        basic courses on programming hero or any other online portal, which
+        will give you clarity on how things work.
+      </p>
+      <a href="#footer">
+        <button class="banner-btn">Contract with me</button>
+      </a>
+    </div>
+  </header>
+  <main>
+    <!-- -------------- This is web dev qa section ----------- -->
+    <section class="container devqa-container">
+      <div class="dev-title">
+        <h1>Why Web Development??</h1>
         <p>
-          To start web development. Must start with the basics of HTML and CSS.
-          HTML and CSS help create the basic design of a website. There are some
-          basic courses on programming hero or any other online portal, which
-          will give you clarity on how things work.
+          Web developers provide businesses with the unique, engaging websites they need to connect with customers.
+          While businesses could feasibly create their own sites using Wix, Squarespace, or WordPress templates, these
+          tend to look amateurish and run slowly compared to sites built by professional Web Developers.
+
         </p>
-        <a href="#footer">
-          <button class="banner-btn">Contract with me</button>
-        </a>
       </div>
-    </header>
-    <main>
-      <!-- -------------- This is web dev qa section ----------- -->
-      <section class="container devqa-container">
-        <div class="dev-title">
-          <h1>Why Web Development??</h1>
-          <p>
-            Web development is the process of creating interactive websites and
-            applications. It involves using HTML, CSS, and JavaScript to create
-            content, structure, and style for the pages. Web development is
-            becoming more popular because it allows businesses to reach a wider
-            audience and create more engaging and user-friendly websites.
+      <div class="dev-content">
+        <!-- Dev Item 1  -->
+        <div class="dev-item">
+          <div class="dev-content-container">
+            <h1 class="dev-item-title">
+              I will Do Coding and Change The World
+            </h1>
+            <p class="dev-item-description">
+              It sounds like you have a strong motivation to make a positive impact through coding. Coding indeed has
+              the potential to change the world by creating new technologies, solving problems, and improving efficiency
+              in various fields.
+
+            </p>
+            <button class="dev-btn">Learn More</button>
+          </div>
+          <img class="dev-content-img" src="/assets/dev1.png" alt="I will Do Coding and Change The World" />
+        </div>
+        <!-- Dev Item 2 -->
+        <div class="dev-item">
+          <img class="dev-content-img" src="/assets/dev2.png" alt="I will help People by creating Modern Web System" />
+          <div class="dev-content-container">
+            <h1 class="dev-item-title">
+              I will help People by creating Modern Web System
+            </h1>
+            <p class="dev-item-description">
+
+              Creating modern web systems can significantly help people by improving accessibility, efficiency, and user
+              experience across various domains.
+
+            </p>
+            <button class="dev-btn">Learn More</button>
+          </div>
+        </div>
+        <!-- Dev Item  3-->
+        <div class="dev-item">
+          <div class="dev-content-container">
+            <h1 class="dev-item-title">
+              I will develop modern websites through coding.
+            </h1>
+            <p class="dev-item-description">
+
+              Developing modern websites through coding allows you to leverage technology to create user-friendly
+              interfaces, enhance functionality, and improve overall user experience.
+
+
+            </p>
+            <button class="dev-btn">Learn More</button>
+          </div>
+          <img class="dev-content-img" src="/assets/dev3.png" alt="I will Do Coding and Change The World" />
+        </div>
+      </div>
+    </section>
+
+    <!-- -------------- This my inspiration section ----------- -->
+    <section class="container">
+      <div class="inspiration-content">
+        <h1>My Inspiration</h1>
+        <p>
+          I've always been fascinated by technology and I wanted to make a
+          difference in the world. Web development has opened my eyes to the
+          possibilities and I'm excited to start working on projects that will
+          help me achieve my goals.
+        </p>
+      </div>
+      <div class="inspiration-video">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=5f5VeDtJCruT799S"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </section>
+
+    <!-- -------------- This my target section ----------- -->
+    <section class="container current_container">
+      <div class="inspiration-content">
+        <h1 id="">My Current Target</h1>
+        <p class="current-p">My coding inspiration is my elder brother from Programming Hero and Jankar Mahabub Bhai
+          from Programming Hero. I came to the world of programming after seeing them.
+        </p>
+      </div>
+      <div class="current-main">
+        <div class="current-div ">
+          <img src="./assets/html.png" alt="">
+          <h2 class="current-h1">HTML</h2>
+          <p class="current-p">It's the markup language that's used for creating websites. The content and settings of a
+            website can be found in our HTML.
           </p>
+          <a class="current-button">Lern More</a>
         </div>
-        <div class="dev-content">
-          <!-- Dev Item 1  -->
-          <div class="dev-item">
-            <div class="dev-content-container">
-              <h1 class="dev-item-title">
-                I will Do Coding and Change The World
-              </h1>
-              <p class="dev-item-description">
-                Web development allows me to create interactive and dynamic
-                websites that can help businesses grow and reach their target
-                audience.
-              </p>
-              <button class="dev-btn">Learn More</button>
-            </div>
-            <img
-              class="dev-content-img"
-              src="/assets/dev1.png"
-              alt="I will Do Coding and Change The World"
-            />
-          </div>
-          <!-- Dev Item 2 -->
-          <div class="dev-item">
-            <img
-              class="dev-content-img"
-              src="/assets/dev2.png"
-              alt="I will help People by creating Modern Web System"
-            />
-            <div class="dev-content-container">
-              <h1 class="dev-item-title">
-                I will help People by creating Modern Web System
-              </h1>
-              <p class="dev-item-description">
-                Web development allows me to create interactive and dynamic
-                websites that can help businesses grow and reach their target
-                audience.
-              </p>
-              <button class="dev-btn">Learn More</button>
-            </div>
-          </div>
-          <!-- Dev Item  3-->
-          <div class="dev-item">
-            <div class="dev-content-container">
-              <h1 class="dev-item-title">
-                I will Do Coding and Change The World
-              </h1>
-              <p class="dev-item-description">
-                Web development allows me to create interactive and dynamic
-                websites that can help businesses grow and reach their target
-                audience.
-              </p>
-              <button class="dev-btn">Learn More</button>
-            </div>
-            <img
-              class="dev-content-img"
-              src="/assets/dev3.png"
-              alt="I will Do Coding and Change The World"
-            />
-          </div>
-        </div>
-      </section>
+        <div class="current-div  current-div-second">
+          <img src="./assets/css.png" alt="">
+          <h2 class="current-h1">CSS</h2>
+          <p class="current-p">CSS, which stands for Cascading Style Sheets, is a language used for describing the
+            presentation of a document written in HTML or XML.
 
-      <!-- -------------- This my inspiration section ----------- -->
-      <section class="container">
-        <div class="inspiration-content">
-          <h1>My Inspiration</h1>
-          <p>
-            I've always been fascinated by technology and I wanted to make a
-            difference in the world. Web development has opened my eyes to the
-            possibilities and I'm excited to start working on projects that will
-            help me achieve my goals.
           </p>
+          <a class="current-button">Lern More</a>
         </div>
-        <div class="inspiration-video">
-          <iframe
-            width="100%"
-            height="100%"
-            src="https://www.youtube.com/embed/DGHn2uOAVCE?si=5f5VeDtJCruT799S"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
+        <div class="current-div current-div-thard">
+          <img src="./assets/js.png" alt="">
+          <h2 class="current-h1">JavaScript</h2>
+          <p class="current-p">JavaScript is a high-level programming language that is primarily used to create dynamic
+            and interactive content on web pages.
+
+          </p>
+          <a class="current-button">Lern More</a>
         </div>
-      </section>
+      </div>
 
-      <!-- -------------- This my target section ----------- -->
-      <section>This my target section</section>
+    </section>
 
-      <!-- -------------- This support section ----------- -->
-      <section>This support section</section>
-    </main>
-    <!-- This is footer section -->
-    <footer id="footer">This is the footer section</footer>
-  </body>
+    <!-- -------------- This support section ----------- -->
+    <section class="container ">
+      <div class="support-div">
+        <h1 class="support-h1">I need Support</h1>
+        <p class="support-p">If you have any comments after visiting this website, you can write them in the box below
+          and submit them.</p>
+        <div class="support-input">
+          <input type="search" value="" placeholder="Suggest me any feedback for me">
+          <button>Submit</button>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- This is footer section -->
+  <footer id="footer">
+    <div class="footer-div">
+      <div>
+        <h5 class="footer-h1">An Open Commitment by Abu Sayed</h5>
+      </div>
+      <div class="footer-icon">
+        <a href="https://www.facebook.com/profile.php?id=100035598160323&mibextid=ZbWKwL
+        " target="_blank"> <img src="./assets/facebook.png" alt=""></a>
+        <a href="https://github.com/Abu-Sayed-Sarker
+        " target="_blank"> <img src="./assets/github.png" alt=""></a>
+        <a href="https://bd.linkedin.com/ " target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
