--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!---------------- This is banner section ------------->
   <header class="banner-container">
     <div class="banner-content">
-      <img src="/assets/hero.png" alt="Coding Hero" />
+      <img src="./assets/hero.png" alt="Coding Hero" />
       <h1>
         "In the near future, I hope to become a
         <br />
@@ -56,11 +56,11 @@
             </p>
             <button class="dev-btn">Learn More</button>
           </div>
-          <img class="dev-content-img" src="/assets/dev1.png" alt="I will Do Coding and Change The World" />
+          <img class="dev-content-img" src="./assets/dev1.png" alt="I will Do Coding and Change The World" />
         </div>
         <!-- Dev Item 2 -->
         <div class="dev-item">
-          <img class="dev-content-img" src="/assets/dev2.png" alt="I will help People by creating Modern Web System" />
+          <img class="dev-content-img" src="./assets/dev2.png" alt="I will help People by creating Modern Web System" />
           <div class="dev-content-container">
             <h1 class="dev-item-title">
               I will help People by creating Modern Web System
@@ -89,7 +89,7 @@
             </p>
             <button class="dev-btn">Learn More</button>
           </div>
-          <img class="dev-content-img" src="/assets/dev3.png" alt="I will Do Coding and Change The World" />
+          <img class="dev-content-img" src="./assets/dev3.png" alt="I will Do Coding and Change The World" />
         </div>
       </div>
     </section>
